detalles y funcionamiento correcto de la pagina

--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -19,6 +19,6 @@ const images = [
 ];
 ---
 
-<Layout title="Fotografías | Fanático Perr1">
+<Layout title="Fotografías | fanatico perr1">
   <PhotosContent client:load />
 </Layout> 
