--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -3,6 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import WorkContent from '../components/WorkContent';
 ---
 
-<Layout title="Proyectos | Fanático Perr1">
+<Layout title="Proyectos | fanatico perr1">
   <WorkContent client:load />
 </Layout> 
