--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,15 @@
+@import url('https://fonts.cdnfonts.com/css/futura-pt');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Futura PT', sans-serif;
+    font-weight: 700;
+  }
+}
 
 .aspect-w-16 {
   position: relative;
@@ -14,4 +23,9 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* Keep default arrow cursor for game section */
+div[class*="relative overflow-hidden rounded-lg shadow-lg"] {
+  cursor: default !important;
 }
