--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ const t = translations[lang];
 	<body class="min-h-screen flex flex-col bg-white dark:bg-gray-900 text-gray-800 dark:text-gray-100 pb-32">
 		<Preloader client:load />
 		<Header />
-		<main class="flex-grow">
+		<main class="flex-grow pb-24 md:pb-8">
 			<slot />
 		</main>
 		<Footer />
