--- a/src/pages/store.astro
+++ b/src/pages/store.astro
@@ -1,13 +1,18 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import StoreContent from '../components/StoreContent';
-import { translations, type Language } from '../i18n/translations';
+import { translations } from '../i18n/translations';
 import { currentLanguage } from '../i18n/store';
+import StoreContent from '../components/StoreContent';
 
-const lang = currentLanguage.get() as Language;
+const lang = currentLanguage.get();
 const t = translations[lang];
 ---
 
 <Layout title={t.pages.store.title}>
-  <StoreContent client:load />
+  <div class="relative h-[calc(100vh-8rem)] bg-cover bg-center bg-no-repeat" style={{ backgroundImage: 'url("/bg.jpg")' }}>
+    <div class="absolute inset-0 bg-black/40 backdrop-blur-[1px]"></div>
+    <div class="relative h-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 flex flex-col">
+      <StoreContent client:load />
+    </div>
+  </div>
 </Layout> 
